--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *terrain.asset filter=lfs diff=lfs merge=lfs -text
 *Terrain.asset filter=lfs diff=lfs merge=lfs -text
 *.glb filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
